Changelog
=========

0.10.3 (unreleased)
-------------------

- Nothing changed yet.


0.10.2 (2013-03-14)
-------------------

- Fix to process Pika timeouts on every asyncore poll to fix heartbeat issues

0.10.1 (2013-03-13)
-------------------

- Add configuration options for 'exchange_auto_declare' and
  'queue_auto_declare'
- Fix 'queue_exclusive = True' to imply also 'queue_durable = False' and
  'queue_auto_delete = True'

0.10.0 (2013-03-12)
-------------------

- Update keepalive-ping-queue to use 1 hour message ttl
- Add option (defaulting to true) for monkey patching Zope2 lifetime_loop for
  shorter asyncore.poll-timeouts on consuming instances.

0.9.8 (2013-03-09)
------------------

- Fix regression: allow to bind queue with empty routing key

0.9.7 (2013-03-05)
------------------

- Fix to not try to requeue auto-acknowledged messages on conflict errors,
  because it's not possible
- Fix consumer configuration to support list of routing keys (to ease the use
  of metronome like exchanges)

0.9.6 (2013-02-21)
------------------

- Fix Rabbit-fixture to be silent when Rabbit has been killed before teardown

0.9.5 (2013-02-20)
------------------

- Fix to include convenient default producers in the default test layer

0.9.4 (2012-11-27)
------------------

- Fixed bugs in registering connections and consuming servers in ZAMQP layer.

- Added 'text/csv' serializer (for serializing iterable container of
  dictionaries into RFC4180 CSV data and deserializing such messages into
  tuple of dictionaries)

0.9.3 (2012-11-27)
------------------

- Enhanced 'runAsyncTest' to accept 'loop_timeout' and 'loop_count' parameters.
- Fixed optional json-serializer to try to import 'json' at first and only then
  'simplejson'.

0.9.2 (2012-09-18)
------------------

- Pinned z3c.unconfigure==1.0.1.
- Added test fixture to be used with ZSERVER-fixtures to support Selenium-testing.
- Fixed consuming server to default to 'Anonymous User' instead of None.